Add SERG twitter account to website settings

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -43,7 +43,7 @@ org_name: Software Engineering Research Group
 description: Software Engineering Research Group
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter: ""
+twitter: "serg_delft"
 
 ############################
 ## Contact details
