--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -8,7 +8,7 @@
 ############################
 
 # Your choice of color theme
-theme: tudelft
+theme: serg
 
 # Automatically change light/dark mode based on user's preference?
 day_night: false
