--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,8 +8,8 @@ main:
   - name: SERG
     url: "/"
     weight: 10
-  - name: People
-    url: "/people"
+  - name: Members
+    url: "/members"
     weight: 20
   - name: Projects
     url: "/project"
