--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,13 @@
 /public/
 /resources/_gen/
 
-# Generated files by Wowchemy
-jsconfig.json
-
 # Executable may be added to repository
 hugo.exe
 hugo.darwin
 hugo.linux
 
 # End of https://www.toptal.com/developers/gitignore/api/hugo
+
+### Wowchemy
+# Generated files by Wowchemy
+jsconfig.json
