Rename people page to members

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -21,7 +21,7 @@ main:
     url: "#"
     weight: 13
   - name: Members
-    url: "/people"
+    url: "/members"
     weight: 20
   - name: Research Lines
     url: "/research-lines"
