Add google analytics token

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -291,7 +291,7 @@ map:
 ############################
 
 marketing:
-  google_analytics: ""
+  google_analytics: "G-NEH0QBGFG6"
   google_tag_manager: ""
   google_site_verification: ""
   baidu_site_verification: ""
