Rename the url of the authors to members
This changes the permalink of the authors taxonomy and disables the list
page of the authors content type.

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -67,6 +67,7 @@ outputs:
 
 # Permalinks
 permalinks:
+  authors: "/members/:slug/"
   event: "/events/:slug/"
   post: "/posts/:slug/"
   project: "/projects/:slug/"
