--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -66,15 +66,15 @@ outputs:
 # Permalinks
 permalinks:
   authors: "/members/:slug/"
-  event: "/events/:slug/"
-  post: "/posts/:slug/"
-  project: "/projects/:slug/"
-  publication: "/publications/:slug/"
+  event: "/events/:filename/"
+  post: "/posts/:filename/"
+  project: "/projects/:filename/"
+  publication: "/publications/:filename/"
   publication_types: "/publication-types/:slug/"
   research_lines: "/research-lines/:slug/"
-  thesis-project: "/thesis-projects/:slug/"
-  tool: "/tools/:slug/"
-  vacancy: "/vacancies/:slug/"
+  thesis_project: "/thesis-projects/:filename/"
+  tool: "/tools/:filename/"
+  vacancy: "/vacancies/:filename/"
 
 # Taxonomy definitions
 taxonomies:
