--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ hugo.linux
 
 # End of https://www.toptal.com/developers/gitignore/api/hugo
 
+# Empty lock file used by hugo
+.hugo_build.lock
+
 ### Wowchemy
 # Generated files by Wowchemy
 jsconfig.json
