Fix typo that I introduced

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -134,7 +134,7 @@ imaging:
 markup:
   _merge: deep
 
-# Timeout for generating page contents, in milli.onds (defaults to 10 seconds).
+# Timeout for generating page contents, in milliseconds (defaults to 10 seconds).
 # Note: this is used to bail out of recursive content generation, if your pages are slow to
 # generate (e.g., because they require large image processing or depend on remote contents)
 # you might need to raise this limit.
